--- a/styles/Menu.css
+++ b/styles/Menu.css
@@ -195,45 +195,7 @@
     }
 }
 
-/* @media screen and (min-width: 580px) and (max-width: 900px) and (min-height: 320px) and (max-height: 425px){
-    .display-menu{
-        left: 15px;
-        bottom: 15px;
-        width: 40px;
-        height: 40px;
-        font-size: 25px;
-    }
-
-    .menu ul li{
-        width: 40px;
-        height: 40px;
-        font-size: 25px;
-        bottom: 15px;
-        left: 15px;
-    }
-
-    .contenedor-color-opciones ul li, .contenedor-rotacion-x ul li, .contenedor-rotacion-y ul li, .contenedor-animacion ul li{
-        left: calc(70px + (var(--i) * 45px));              
-    }
-
-    .contenedor-rotacion-x ul li, .contenedor-rotacion-y ul li, .contenedor-animacion ul li{
-        font-size: 15px;
-    }
-
-    .contenedor-color-opciones ul li span{
-        width: 25px;
-        height: 25px;
-    }
-
-    .seleccionar-color{
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-} */
-
-@media screen and (min-width: 320px) and (max-width: 425px) and (min-height: 580px) and (max-height: 900px) and (orientation: landscape){
+@media screen and (min-width: 580px) and (max-width: 900px) and (min-height: 320px) and (max-height: 425px){
     .display-menu{
         left: 15px;
         bottom: 15px;
